@@ -51,6 +51,9 @@ public option jedit_completion_delay : real = 0.5
 public option jedit_completion_immediate : bool = false
   -- "insert uniquely completed abbreviation immediately into buffer"
 
+public option jedit_completion_path_ignore : string = "*~:*.marks:*.orig:*.rej:.DS_Store"
+  -- "glob patterns to ignore in path completion (separated by colons)"
+
 
 section "Spell Checker"
 
